--- a/haskell-bartosz.cabal
+++ b/haskell-bartosz.cabal
@@ -16,7 +16,9 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                    ,  Lec62
   build-depends:       base >= 4.7 && < 5
+                     , mtl
   default-language:    Haskell2010
 
 executable haskell-bartosz-exe
